--- a/manifest.yml
+++ b/manifest.yml
@@ -2,5 +2,6 @@ applications:
 - name: publisherdemo
   memory: 1G
   routes:
-  - route: publisherdemo.pcfbeta.io
+#  - route: publisherdemo.pcfbeta.io
+  - route: publisherdemo.pcfdemo.com
   path: target/publisherdemo-0.0.1-SNAPSHOT.jar
